Fix Layout on Small device

--- a/CSS/accueil.css
+++ b/CSS/accueil.css
@@ -184,11 +184,11 @@ main {
 }
 
 .title-accueil-section h1 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 30px;
   color: var(--main-color);
-  margin: 10px 28px;
+  margin: 10px 0;
   background-image: url("../images/background.png");
   background-size: cover;
   background-position: center center;
@@ -200,13 +200,13 @@ main {
 .title-accueil-section h2 {
   font-size: 40px;
   font-weight: 500;
-  line-height: 52px;
-  padding: 55px 50px;
+  line-height: 32px;
+  padding: 55px 0;
 }
 
 .title-accueil-section p {
   font-size: 25px;
-  line-height: 50px;
+  line-height: 30px;
   padding-top: 20px;
 }
 
@@ -308,6 +308,7 @@ main {
   }
 
   .title-accueil-section h1 {
-    font-size: 50px;
+    font-size: 40px;
+    line-height: 60px;
   }
 }
