--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -10,7 +10,7 @@ body {
   margin: 40px auto;
 }
 .contacts-section {
-  width: 70%;
+  width: 90%;
   margin: auto;
   font-family: "Lato", sans-serif;
 }
@@ -46,6 +46,7 @@ body {
 
 .contacts-section #adresses p {
   font-size: 1.1rem;
+  margin: 5px 0;
 }
 .contacts-section #adresses p span {
   font-weight: bold;
@@ -56,7 +57,7 @@ body {
 #emailing,
 #calling,
 #messaging {
-  padding: 2rem;
+  padding: 1.8rem;
   background-color: var(--main-white);
   border-radius: 20px;
   text-align: center;
@@ -142,5 +143,9 @@ textarea {
 @media screen and (min-width: 769px) {
   #emailing-calling {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .contacts-section {
+    width: 70%;
   }
 }
